--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=siopa-auth
-server.port=8080
+server.port=8083
 
 spring.jpa.database=postgresql
 spring.datasource.platform=postgres
@@ -24,3 +24,12 @@ spring.kafka.consumer.auto-offset-reset=earliest
 # Use String Deserialization
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
+# Eureka Configuration
+eureka.client.enabled=true
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+eureka.instance.hostname=localhost
+eureka.instance.prefer-ip-address=true
