--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=siopa-auth
-server.port=8083
+server.port=8085
 
 spring.jpa.database=postgresql
 spring.datasource.platform=postgres
@@ -33,3 +33,14 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 eureka.instance.hostname=localhost
 eureka.instance.prefer-ip-address=true
+
+# Expose all Actuator endpoints
+management.endpoints.web.exposure.include=health,metrics,prometheus
+
+# Enable Prometheus metrics
+management.metrics.export.prometheus.enabled=true
+
+# Enable detailed JVM, HTTP, and database metrics
+management.metrics.enable.jvm=true
+management.metrics.enable.http=true
+management.metrics.enable.datasource=true
