--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,13 +34,11 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.hostname=localhost
 eureka.instance.prefer-ip-address=true
 
-# Expose all Actuator endpoints
-management.endpoints.web.exposure.include=health,metrics,prometheus
+# Zipkin
+management.tracing.sampling.probability=1.0
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
 
-# Enable Prometheus metrics
-management.metrics.export.prometheus.enabled=true
-
-# Enable detailed JVM, HTTP, and database metrics
-management.metrics.enable.jvm=true
-management.metrics.enable.http=true
-management.metrics.enable.datasource=true
+# Actuator
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoint.health.show-details=always
